# practice

./: README.md
claude/electron-vite-app/: .gitignore  README-HTTP-CLIENT.md  README.md  agent.db  agent.db-shm  drizzle.config.ts  electron.vite.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  test-agent-system.js  test-initialization.js  test-langgraph-system.js  (+2 more)
claude/system-trading/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
claude/system-trading/monitoring/: README.md
claude/system-trading/scripts/: init.sql
claude/system-trading/system_trading/: __init__.py
claude/system-trading/system_trading/api/: __init__.py  main.py
claude/system-trading/system_trading/api/routers/: backtesting.py  market_data.py  system.py  trading.py
claude/system-trading/system_trading/backtesting/: data_manager.py  engine.py
claude/system-trading/system_trading/cli/: database.py
claude/system-trading/system_trading/config/: settings.py
claude/system-trading/system_trading/engine/: __init__.py  trading_engine.py
claude/system-trading/system_trading/exchanges/: __init__.py  unified_client.py
claude/system-trading/system_trading/strategies/: base_strategy.py  enhanced_ma_strategy.py  rsi_strategy.py
claude/system-trading/system_trading/utils/: __init__.py  exceptions.py  logging.py  retry.py  symbol_converter.py
claude/system-trading/tests/: conftest.py  test_backtesting.py  test_enhanced_strategies.py  test_portfolio_manager.py  test_symbol_converter.py
(+546 files in other folders)
