[project]
name = "system-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.5",
    "fastapi>=0.117.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pandas-ta>=0.4.71b0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-binance>=1.0.29",
    "pyupbit>=0.2.34",
    "redis>=6.4.0",
    "ta-lib>=0.6.7",
    "uvicorn>=0.36.0",
    "vectorbt>=0.25.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "types-redis>=4.6.0.20241004",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# Pandas stubs
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "ta.*",
    "pandas_ta.*",
    "pyupbit.*",
    "binance.*",
    "pydantic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
